@@ -44,6 +44,7 @@ FBCALL unsigned long long fb_hStr2ULongint( char *src, int len )
 {
     char 	*p;
     int 	radix;
+	int skip;
 
 	/* skip white spc */
 	p = fb_hStrSkipChar( src, len, 32 );
@@ -55,6 +56,7 @@ FBCALL unsigned long long fb_hStr2ULongint( char *src, int len )
 	radix = 10;
 	if( (len >= 2) && (p[0] == '&') )
 	{
+		skip = 2;
 		switch( p[1] )
 		{
 			case 'h':
@@ -69,13 +71,18 @@ FBCALL unsigned long long fb_hStr2ULongint( char *src, int len )
 			case 'B':
 				radix = 2;
 				break;
+
+			default: /* assume octal */
+				radix = 8;
+				skip = 1;
+				break;
 		}
 
 		if( radix != 10 )
 		{
-			p += 2;
+			p += skip;
 #ifdef TARGET_WIN32
-			return fb_hStrRadix2Longint( p, len-2, radix );
+			return fb_hStrRadix2Longint( p, len - skip, radix );
 #endif
 		}
 	}
@@ -101,5 +108,3 @@ FBCALL unsigned long long fb_VALULNG ( FBSTRING *str )
 
 	return val;
 }
-
-
