@@ -72,6 +72,11 @@ FBCALL double fb_WstrToDouble( const FB_WCHAR *src, int len )
 			case L'B':
 				radix = 2;
 				break;
+
+			default: /* assume octal */
+				radix = 8;
+				r--;
+				break;
 		}
 
 		if( radix != 0 )
