@@ -69,6 +69,11 @@ FBCALL unsigned int fb_WstrToUInt( const FB_WCHAR *src, int len )
 			case L'B':
 				radix = 2;
 				break;
+
+			default: /* assume octal */
+				radix = 8;
+				r--;
+				break;
 		}
 
 		if( radix != 10 )
