@@ -41,6 +41,7 @@ Version 0.21.0 Beta:
 - PRINT USING now supports "&" for intelligent number formatting (counting_pine)
 - PRINT USING: normal expressions allowed before USING (counting_pine)
 - PRINT USING: support for SPC/TAB (counting_pine)
+- VAL/VALINT/... now support "&..." for octal numbers, e.g. "&123" (counting_pine)
 
 [fixed]
 - WIDTH was crashing when optional parameter was not specified (DrV)
